# isicloud5gb.lol

./: .gitignore  .weblate  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt.md  README.ru.md  README.tr.md  README.zh_Hans.md  README.zh_Hant.md  vercel.json
.github/: FUNDING.yml
.github/workflows/: build-readme.yml  check-readme.yml  gradle-publish.yml  gradle-test.yml  npm-publish.yml  npm-test.yml  nuget-publish.yml  pip-publish.yml  pip-test.yml  spm-test.yml
isicloud5gb-js/: README.md  package.json
locales/: de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pl.json  pt.json  ru.json  tr.json  zh_Hans.json  zh_Hant.json
mvn/isicloud5gb/: .gitignore  build.gradle.kts  settings.gradle.kts
mvn/isicloud5gb/isicloud5gb-sample/: build.gradle.kts
npm/: README.md  index.cjs  index.d.ts  index.js  package.json  sample.js  test.js
nuget/: IsICloud5GB.sln
nuget/IsICloud5GB/: IsICloud5GB.cs  IsICloud5GB.csproj  README.md
nuget/IsICloud5GB.Sample/: IsICloud5GB.Sample.csproj  Program.cs
nuget/IsICloud5GB.Tests/: IsICloud5GB.Tests.csproj  IsiCloud5GbTests.cs
pip/: README.md  pyproject.toml
pip/isicloud5gb/: __init__.py
pip/sample/: sample.py
pip/tests/: test_isicloud5gb.py
scripts/: build-readme.mjs
spm/: Package.swift  README.md
spm/Sources/IsICloud5GB/: IsICloud5GB.swift
spm/Sources/IsICloud5GBSample/: main.swift
www/: index.html  scripts.js  site.webmanifest  styles.css
www/.well-known/: atproto-did
(+4 files in other folders)
