[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "isicloud5gb"
version = "1.0.0"
description = "Is iCloud's free tier still 5GB? Yes. This package programmatically confirms what we all already know."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yury Vashchylau" }
]
keywords = ["icloud", "apple", "storage", "cloud", "free", "tier", "5gb"]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["isicloud5gb"]

[project.urls]
Homepage = "https://isicloud5gb.lol"
Repository = "https://github.com/digitalby/isicloud5gb.lol"
